[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']

[tool]
[tool.commitizen]
bump_message = 'bump(RELEASE): $current_version → $new_version'
version = '0.1.0'
version_files = ['pyproject.toml:version']

[tool.poetry]
authors = ['Niall Byrne <niall@niallbyrne.ca>']
description = 'Reusable CI/CD components.'
license = 'MPL-2.0'
name = 'cicd-tools'
readme = 'README.md'
version = '0.1.0'

[tool.poetry.dependencies]
python = '^3.8'

[tool.poetry.group]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
check-jsonschema = '^0.22.0'
commitizen = '^2.42.1'
pre-commit = '^3.1.1'
